--- a/sass/_path.scss
+++ b/sass/_path.scss
@@ -16,6 +16,9 @@
   }
 }
 .experience-page {
+  .page-sections {
+    overflow-x: initial;
+  }
   .page-content {
     .city {
       position: sticky;
